--- a/style.css
+++ b/style.css
@@ -12,3 +12,12 @@ body {
 *::before {
     box-sizing: inherit;
 }
+
+#player {
+    width: 120px;
+    position: absolute;
+    left: 50%;
+    bottom: 10%;
+    transform: translateX(-50%);
+    outline: #fefefe solid 1px;
+}
