--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ body {
     background-image: url('assets/background.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100%;
 }
 
 *,
