--- a/style.css
+++ b/style.css
@@ -20,6 +20,27 @@ body {
     box-sizing: inherit;
 }
 
+#GUI {
+    z-index: 10000;
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+#GUI > * {
+    position: absolute;
+}
+
+#healthbar {
+    bottom: 0;
+    left: 0;
+}
+
+#healthbar * {
+    width: 60px;
+    margin: 10px;
+}
+
 .game-object {
     position: absolute;
     top: 110vh;
@@ -48,7 +69,7 @@ body {
 
 .alien-group {
     height: 90px;
-    width: 150vw;
+    width: 150%;
     outline: cyan solid 2px;
     overflow: hidden;
 }
