--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
+
 html,
 body {
     margin: 0;
@@ -52,11 +54,28 @@ body {
     margin: 10px;
 }
 
-#message {
+#level {
     left: 50%;
-    top: 50%;
+    top: 0;
     transform: translate(-50%, -50%);
     z-index: 1000;
+    font-size: 3rem;
+    font-family: 'Russo One';
+    transform-origin: center;
+    transition: all 2s linear;
+}
+
+.center {
+    animation: center 2s forwards ease-out;
+}
+
+@keyframes center {
+    to {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(3);
+        letter-spacing: .2em;
+    }
 }
 
 .game-object {
